--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="menu-lives">
                 
-                <img class="img-cogumelo" src="/DETONA RALPH/scr/images/cogumelo.png" alt="Foto das vidas do jogador">
+                <img class="img-cogumelo" src="./scr/images/cogumelo.png" alt="Foto das vidas do jogador">
                 <h2 id="vidas">3</h2>
             </div>
         </div>
